--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/bun": "latest",
-    "vitest": "^1.2.2",
-    "eslint-plugin-simple-import-sort": "^10.0.0"
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "vite-tsconfig-paths": "^4.3.1",
+    "vitest": "^1.2.2"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
