--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "vitest run"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.0",
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/bun": "latest",
     "eslint-plugin-simple-import-sort": "^10.0.0",
